--- a/assets/scss/_skills.scss
+++ b/assets/scss/_skills.scss
@@ -70,6 +70,7 @@
             margin: 20px 0px;
           }
           .skills-cards-name {
+            z-index: 1;
             left: 50%;
             height: auto;
             position: absolute;
